[package]
name = "fuel-asm"
description = "Defines all opcodes available in the FuelVM."
version = "0.1.0"
authors = ["Victor Lopez <victor.lopez@fuel.sh>"]
edition = "2021"
repository = "https://github.com/FuelLabs/fuel-asm"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
categories = ["cryptography::cryptocurrencies", "data-structures", "parsing"]

[dependencies]
fuel-types = { git = "ssh://git@github.com/FuelLabs/fuel-types.git", branch = "no-std", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
scale-codec = { package = "parity-scale-codec", version = "2.0.0", optional = true }
scale-info = { version = "1.0.0", features = ["derive"], optional = true }

[features]
default = ["fuel-types/default", "std"]
std = ["fuel-types/std"]
serde-types = ["fuel-types/serde-types", "serde-types-minimal", "serde/default", "std"]
serde-types-minimal = ["fuel-types/serde-types-minimal", "serde"]
scale = ["scale-codec", "scale-info", "fuel-types/scale"]

[[test]]
name = "test-encoding"
path = "tests/encoding.rs"
required-features = ["std"]
